Fixed initial loading of the parallax. Fixed arrow z-index.

--- a/styles.scss
+++ b/styles.scss
@@ -255,6 +255,8 @@ p {
   @include animation-name(bounce);
   @include animation-duration(3s);
   @include animation-iteration-count(infinite);
+
+  z-index: 12;
 }
 // PARALLAX
 
